oasis-build/tests/ui/service_name_mismatch.rs
#[derive(oasis_std::Service)]
pub struct Service;

fn main() {
    oasis_std::service!(Serivce);
}


